# DotAgent

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  ui-preview.html  vite.config.ts
scripts/: ensure-dist.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Header.tsx  Sidebar.tsx
src/context/: AppContext.tsx
src/data/: mockData.ts
src/pages/: ApiConfig.tsx  Dashboard.tsx  GlobalConfig.tsx  ProjectConfig.tsx  SnippetLibrary.tsx
src/types/: index.ts
开发文档/: 方案设计-SPEC.md
