[package]
name = "dotagent"
version = "0.1.0"
description = "Unified configuration hub for AI coding agents"
authors = ["DotAgent Team"]
license = "MIT"
edition = "2021"

[[bin]]
name = "dotagent"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0.0", features = ["dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.35"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
