[package]
name = "dotagent"
version = "0.1.0"
description = "Unified configuration hub for AI coding agents"
authors = ["DotAgent Team"]
license = "MIT"
edition = "2021"

[lib]
name = "dotagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["dialog-all", "fs-all", "shell-open"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
